--- a/trunk/length.html
+++ b/trunk/length.html
@@ -18,14 +18,14 @@
 		    school: 'No.1 Middle School',
 		    height: 1.70,
 		    weight: 65,
-		    score: null
+		    score: 99,
 		};
-	document.write(xiaoming.name+"</br>");//write读取	
-	document.write(xiaoming.birth+"</br>");
-	document.write(xiaoming.school+"</br>");
-	document.write(xiaoming.height+"</br>");
-	document.write(xiaoming.weight+"</br>");
-	document.write(xiaoming.score+"</br>");
+		document.write(xiaoming.name+"</br>");//write读取	、br是换行
+		document.write(xiaoming.birth+"</br>");
+		document.write(xiaoming.school+"</br>");
+		document.write(xiaoming.height+"</br>");
+		document.write(xiaoming.weight+"</br>");
+		document.write(xiaoming.score+"</br>");
 	
 		</script>
 	</body>
