--- a/trunk/13_连字符和加号.html
+++ b/trunk/13_连字符和加号.html
@@ -2,8 +2,16 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>连字符和加号</title>
 	</head>
 	<body>
+		键盘上+在JS中有两层含义：<br />
+		1) 连字符 <br />
+		2） 加
+		<script type="text/javascript">
+			console.log("我"+"爱"+"你");//连字符，把三个独立的汉字，连接在一起
+			console.log("我+爱+你");//原样输出
+			console.log(1+2+3);//输出6
+		</script>
 	</body>
 </html>
