--- a/trunk/17_运算符和表达式.html
+++ b/trunk/17_运算符和表达式.html
@@ -9,6 +9,20 @@
 		<p>我们比如计算这个：</p>
 		<p>3+4X5除以6+3</p>
 		<p>javascrip中正确表达式：</p>
+		<script type="text/javascript">
+		//	var a = 1 + 2 * 3;
+		//	console.log(a);    //先乘除后加减
 		
+		//		var a = 12 / 2 * 3 + 2;
+		//		console.log(a);  
+		
+		
+		//		var a = (1 + 2) * 3 + 3 * 5
+		//		console.log(a); 
+		
+		
+		var a = (6 + ((1 + 2) * 3 + 3)) * 5
+		console.log(a);
+		</script>
 	</body>
 </html>
