--- a/trunk/18_取余数.html
+++ b/trunk/18_取余数.html
@@ -2,8 +2,23 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>取余数</title>
 	</head>
 	<body>
+		<script>
+//			var a = 13 % 5 ;  // 3   13除5=2.6，取整数2 然后 13-5*2 =3
+//			console.log(a); //3
+//			console.log(10 % 5); //0  10除5=2，取整数2 然后 10-5*2 =0
+//			console.log( 18 % 9);  //0 
+//			console.log( 12 % 7) //5  12除7=1.714，取整数1 然后 12-7*1 =5
+//			console.log (3 % 5) //3   3除5=0.6，取整数0 然后 3-5*0 =3
+
+
+//			var a = 1+2*3 % 4 /3 ;
+//			console.log(a)
+
+			var a = (1+2) % 4 *3 +5 ;
+			console.log(a)
+		</script> 
 	</body>
 </html>
