--- a/02/06_计算数字和.html
+++ b/02/06_计算数字和.html
@@ -7,10 +7,13 @@
 	<body>
 		<script type="text/javascript">
 			var mun = prompt("请输入数字");
-			var bai = parseInt(mun/100);
-			var shi = parseInt(mun % 100/10);
-			var gee = parseInt(mun % 10);
+			var bai = parseInt(mun/100);//这个是百位数
+			var shi = parseInt(mun % 100/10);//这个是十位数
+			var gee = parseInt(mun % 10);//这个是个位数
+			
+		//这个是百位数+十位数+各位数 。举个例子：输入数字123，输出结果为 1+2+3=6	
 			var ber = bai + shi + gee;
+			
 			alert(ber)
 		</script>
 	</body>
