--- a/trunk/02/08_关系运算符.html
+++ b/trunk/02/08_关系运算符.html
@@ -60,7 +60,7 @@
 		  
 			//全等于
 			console.log(56 === "56");//false
-			console.log("56" === 56);//falsev
+			console.log("56" === 56);//false
 			console.log("56" === "56");//true
 			console.log(56 === 56);//true
 		
